--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Title -->
-    <title>Travel</title>
+    <title> jQuery Example</title>
    
     
     <!-- Fonts Link -->
